feat(trackingId): add comments to methods fix(version): use build version in SwaggerConfiguration